libstdc++-v3/src/atomic.cc
@@ -28,7 +28,7 @@
 // invalidate any other reasons why the executable file might be covered by
 // the GNU General Public License.
 
-#include <stdint.h>
+#include "gstdint.h"
 #include <cstdatomic>
 
 #define LOGSIZE 4
